--- a/lab 16.html
+++ b/lab 16.html
@@ -145,7 +145,7 @@
 
     <header>
         
-        <img src="profile imgae" alt="Profile Photo"><br>
+        <img src="profile pic.png" alt="Profile Photo"><br>
         <h1>Dipak Kanthale </h1>
         <p>Web Developer | Programmer | Technology Enthusiast</p>
     </header>
